# smart-sorter

./: .cursorrules  .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml  dependabot.yml  release.yml
docs/: RELEASE.md
src/: cli.rs  config.rs  file_ops.rs  main.rs  sorter.rs
