[package]
name = "smart-sorter"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI tool to automatically organize files by extension into categorized folders"
license = "MIT"
readme = "README.md"
keywords = ["cli", "file-organizer", "automation"]
categories = ["command-line-utilities"]
rust-version = "1.70.0"

[dependencies]
# CLI argument parsing with derive macro
clap = { version = "4.4", features = ["derive"] }

# Error handling with context
anyhow = "1.0"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Colored terminal output
colored = "2.1"

# For lazy static initialization of extension mappings
once_cell = "1.19"

[dev-dependencies]
# Temporary directory for testing
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
